<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:fitsSystemWindows="true">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dip"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/backCalendar"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/color_layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/option_item_height"
            android:layout_marginTop="16dip"
            android:layout_marginLeft="@dimen/option_item_horizontal_margin"
            android:layout_marginRight="@dimen/option_item_horizontal_margin"
            android:background="@drawable/shape_no_corner_without_bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/normal_font_size"
                android:text="@string/theme_color"
                android:gravity="center"
                android:textColor="@color/optionLabel"
                />
            <TextView
                android:id="@+id/theme_color"
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/option_layer_horizontal_margin"
                android:paddingStart="30dip"
                android:paddingEnd="@dimen/option_layer_horizontal_margin"
                android:gravity="center"
                android:background="@color/colorPrimary"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/work_layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/option_item_height"
            android:layout_marginLeft="@dimen/option_item_horizontal_margin"
            android:layout_marginRight="@dimen/option_item_horizontal_margin"
            android:background="@drawable/shape_no_corner_without_bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/normal_font_size"
                android:gravity="center"
                android:textColor="@color/optionLabel"
                android:text="@string/display_work"
                />

            <TextView
                android:id="@+id/display_work"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/option_value_size"
                android:text="@string/not_display"
                android:gravity="center"
                android:textColor="@color/optionValue"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ring_layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/option_item_height"
            android:layout_marginLeft="@dimen/option_item_horizontal_margin"
            android:layout_marginRight="@dimen/option_item_horizontal_margin"
            android:background="@drawable/shape_no_corner_without_bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/normal_font_size"
                android:gravity="center"
                android:textColor="@color/optionLabel"
                android:text="@string/ring_file"
                />

            <TextView
                android:id="@+id/ring_file"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/option_value_size"
                android:text="@string/has_no"
                android:gravity="center"
                android:textColor="@color/optionValue"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/time_layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/option_item_height"
            android:layout_marginLeft="@dimen/option_item_horizontal_margin"
            android:layout_marginRight="@dimen/option_item_horizontal_margin"
            android:background="@drawable/shape_no_corner_without_bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/normal_font_size"
                android:text="@string/ring_time"
                android:gravity="center"
                android:textColor="@color/optionLabel"
                />
            <TextView
                android:id="@+id/ring_time"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/option_value_size"
                android:gravity="center"
                android:paddingStart="30dip"
                android:text="30"
                android:textColor="@color/optionValue"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notification_layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/option_item_height"
            android:layout_marginLeft="@dimen/option_item_horizontal_margin"
            android:layout_marginRight="@dimen/option_item_horizontal_margin"
            android:background="@drawable/shape_no_corner_without_bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/normal_font_size"
                android:text="@string/notification_show"
                android:gravity="center"
                android:textColor="@color/optionLabel"
                />
            <com.jjforever.wgj.maincalendar.monthui.SwitchButton
                android:id="@+id/notification_switch_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/option_value_size"
                android:gravity="center"
                android:textColor="@color/optionValue"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/debug_layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/option_item_height"
            android:layout_marginLeft="@dimen/option_item_horizontal_margin"
            android:layout_marginRight="@dimen/option_item_horizontal_margin"
            android:layout_marginBottom="12dip"
            android:background="@drawable/shape_bottom_corner_no_top_line"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/normal_font_size"
                android:text="@string/record_log"
                android:gravity="center"
                android:textColor="@color/optionLabel"
                />
            <com.jjforever.wgj.maincalendar.monthui.SwitchButton
                android:id="@+id/debug_switch_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/option_layer_horizontal_margin"
                android:textSize="@dimen/option_value_size"
                android:gravity="center"
                android:textColor="@color/optionValue"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>